Project structure refactor 1

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
 <html lang="en">
   <script src="https://kit.fontawesome.com/09fe3c9c5c.js" crossorigin="anonymous"></script>
 
-  <link rel = "icon" href = "images/joka.ico">
+  <link rel = "icon" href = "assets/images/joka.ico">
 
-  <script defer src = "Function.js" > </script>
+  <script defer src = "./Function.js" > </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel ="stylesheet" href="Styles.css"> <!--This tag let us load our css-->
+    <link rel ="stylesheet" href="./Styles.css"> <!--This tag let us load our css-->
     
     <body>
 
