Proving modules in the project 4.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel = "icon" href = "assets/images/joka.ico">
 
-  <script defer src = "src/Function.js" type = "module"> </script>
+  <script  src = "src/Function.js" type = "module"> </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
