Fixing loader script issue and addjusting a bit the UI with css

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
 
   <!-- * Css modules: -->
-  <link rel ="stylesheet" href="./src/CSS/main.css">
+  <link rel ="stylesheet" href="./">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
