Creating structure for implement music in game

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <script defer src= "./src/JS/Logic/Functions/information_functions.js"></script>
   <script defer src="./src/JS/Animations/map_animations.js"></script>
   <script defer src= "./src/JS/Animations/set_map_enemies.js"></script>
+
+  <!-- Here we'll load our sound scripts -->
+  <script defer src="./src/JS/sounds_controllers/music/mainMenuMusic.js"></script>
   
   <!-- *Now we Boot all our program functions using our core main file: -->
   <script defer src = "./src/JS/Core/main.js"></script>
