--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <div class="motherBox">
 
-        <header class="header">ç
+        <header>
+            <h1 class="headerContainer"><a href="#" class="headerTitle">Mokepon World</a></h1>
             <nav>
-                <ul>
+                <ul class="optionsContainer">
                     <li class="navbarOption"><a href="#" class="navbarLink"></a></li>
                     <li class="navbarOption"><a href="#" class="navbarLink"></a></li>
                     <li class="navbarOption"><a href="#" class="navbarLink"></a></li>
@@ -23,41 +24,39 @@
         <section class="mainSection">
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 1</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 1</a></button>
             </div>
 
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 2</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 2</a></button>
             </div>
 
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 3</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 3</a></button>
             </div>
 
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 4</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 4</a></button>
             </div>
 
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 5</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 5</a></button>
             </div>
 
             <div class="mapContainer">
                 <img src="" alt="" class="mapImage">
-                <h4 class="mapTitle"></h4>
-                <button class="mapButton"><a href="" class="mapAccess"></a></button>
+                <h4 class="mapTitle">Mokepon Map 6</h4>
+                <button class="mapButton"><a href="" class="accessMap">Map number 6</a></button>
             </div>
-            
-        </section>
 
         <footer class = "footerSection"></footer>
     </div>
