--- a/src/HTML/first_map.html
+++ b/src/HTML/first_map.html
@@ -22,7 +22,7 @@
   <script defer src= "../JS/Logic/Classes/global_classes.js"></script>
   <script defer src= "../JS/Logic/Objects/global_objects.js"></script>
   
-  <!-- *Now we load our logi functions and animations -->
+  <!-- *Now we load our login functions and animations -->
   <script defer src= "../JS/Logic/Functions/combat_functions.js"></script>
   <script defer src= "../JS/Logic/Functions/render_functions.js"></script>
   <script defer src= "../JS/Logic/Functions/map_functions.js"></script>
